<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="nosvs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="togglebuttonGST">ToggleButton</string>
    <string name="togglebuttonSVS">ToggleButton</string>
    <string name="nogst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="togglebuttonSplit">ToggleButton</string>
    <string name="togglebuttonReset">ToggleButton</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>